@@ -1,4 +1,4 @@
-Copyright (c) 2007-2009, Thomas BERNARD 
+Copyright (c) 2007-2011, Thomas BERNARD 
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
